--- a/learntest/test.html
+++ b/learntest/test.html
@@ -2,12 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Insert title here</title>
+<title>碰撞效果</title>
 <style type="text/css">
 *{padding:0;margin:0}
-#piao,#piao1,#piao2,#piao3,#piao4{position:absolute;width:100px;border:5px solid red;height:100px;background:#abcdef;}
+#piao,#piao1,#piao2,#piao3,#piao4{position:absolute;width:100px;border:5px solid red;height:100px;background:#abcdef;line-height: 100px;text-align: center;}
 </style>
-<script type="text/javascript" src="../js/jquery.js"></script>
+<script type="text/javascript" src="jquery-2.1.1.min.js"></script>
 <script type="text/javascript">
 var dang='right';//水平方向
 var ydang='bottom';//竖直方向
