--- a/test/background.html
+++ b/test/background.html
@@ -2,20 +2,22 @@
 div{float: left;margin:10px;width:300px;height:300px;}
 </style>
 
-<div style="background: -webkit-linear-gradient(red,yellow);"></div>
+<div style="background: -webkit-linear-gradient(red,yellow);">1</div>
 
-<div style="background: -webkit-linear-gradient(red 100px,yellow 200px);"></div>
+<div style="background: -webkit-linear-gradient(red 100px,yellow 200px);">2</div>
 
-<div style="background: -webkit-linear-gradient(left ,red , yellow);"></div>
+<div style="background: -webkit-linear-gradient(left ,red , yellow);">3</div>
 
-<div style="background: -webkit-linear-gradient(left ,red ,yellow ,blue);"></div>
+<div style="background: -webkit-linear-gradient(left ,red ,yellow ,blue);">4</div>
 
-<div style="background: -webkit-linear-gradient(left ,red 100px,yellow 200px);"></div>
+<div style="background: -webkit-linear-gradient(left ,yellow 100px,red 200px);">5</div>
 
-<div style="background: -webkit-linear-gradient(left ,red 100px,yellow 200px);"></div>
+<div style="background: -webkit-linear-gradient(left ,red 100px,yellow 200px);">6</div>
 
-<div style="background: -webkit-linear-gradient(left top,red 100px,yellow 200px);"></div>
+<div style="background: -webkit-linear-gradient(left ,red 100px,yellow 200px);">7</div>
 
-<div style="background: -webkit-linear-gradient(left top,red ,yellow );"></div>
+<div style="background: -webkit-linear-gradient(left top,red 100px,yellow 200px);">8</div>
 
-<div style="background: -webkit-gradient(linear,0 0,0 100%,from(rgba(255,255,255,0)),to(rgba(36,36,36,1)));background-color: #44A3E8;"></div>
+<div style="background: -webkit-linear-gradient(left top,red ,yellow );">9</div>
+
+<div style="background: -webkit-gradient(linear,0 0,0 100%,from(rgba(255,255,255,0)),to(rgba(36,36,36,1)));background-color: #44A3E8;">10</div>
