--- a/learntest/css3.html
+++ b/learntest/css3.html
@@ -74,9 +74,9 @@
 </head>
 <body>
 
-	<h1 id="xiuxiu">秀秀，能点到前面那个乱飞的东西上面的字吗？点到有惊喜哦！</h1>
-	<div id="animated_div" onclick="alert('我爱你！');document.getElementById('xiuxiu').innerHTML='秀秀，我爱你！';document.getElementById('hidden').style.display='none';">秀秀</div>
-	<input type="submit" id="hidden" value="实在点不到飞的，就来点我吧，效果一样的！" onclick="alert('我爱你！');document.getElementById('xiuxiu').innerHTML='秀秀，我爱你！';document.getElementById('hidden').style.display='none'; " style="border:1px solid blue;background:white;border-radius:5px;"/>
+	<h1 id="xiuxiu">王淑敏，能点到前面那个乱飞的东西上面的字吗？点到有惊喜哦！</h1>
+	<div id="animated_div" onclick="alert('大笨蛋！');document.getElementById('xiuxiu').innerHTML='哈哈，大笨蛋！';document.getElementById('hidden').style.display='none';">秀秀</div>
+	<input type="submit" id="hidden" value="实在点不到飞的，就来点我吧，效果一样的！" onclick="alert('大笨蛋！');document.getElementById('xiuxiu').innerHTML='哈哈，你一定没点到那个飞的！';document.getElementById('hidden').style.display='none'; " style="border:1px solid blue;background:white;border-radius:5px;"/>
 
 
 
